--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,6 +47,6 @@
         </div>
     </section>
 </div>
-<script src="/script/signup.js"></script>
+<script src="/js/script/signup.js"></script>
 </body>
 </html>
