--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,11 +30,12 @@
     </div>
 
     <div class="form-footer">
-      <a href="/signup">회원가입</a>
+      <a href="/view/signup">회원가입</a>
       |
       <a href="/forgot-password">비밀번호 찾기</a>
     </div>
   </form>
 </div>
+<script src="/js/script/login-script.js"></script>
 </body>
 </html>
