--- a/src/main/resources/templates/signUp-helper.html
+++ b/src/main/resources/templates/signUp-helper.html
@@ -10,14 +10,18 @@
 <div class="container">
     <header class="header">
         <h1>도우미 가입하기</h1>
-        <p>도우미로 가입하여 도움을 줄 수 있습니다.</p>
+        <p>어르신으로 가입하여 도움을 요청할 수 있습니다.</p>
     </header>
 
     <section class="form-section">
         <form id="signup-form">
             <div class="form-group">
                 <label for="username">아이디</label>
-                <input type="text" id="username" name="username" placeholder="아이디를 입력하세요" required>
+                <div class="input-group">
+                    <input type="text" id="username" name="username" placeholder="아이디를 입력하세요" required>
+                    <button type="button" id="check-username" onclick="checkUsername()">중복확인</button>
+                </div>
+                <small id="username-message" class="message"></small>
             </div>
 
             <div class="form-group">
@@ -46,7 +50,7 @@
             </div>
 
             <div class="form-actions">
-                <button type="submit">가입하기</button>
+                <button type="submit" id="submit-button" disabled>가입하기</button>
             </div>
         </form>
     </section>
