--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -91,5 +91,6 @@
 
 <script src="/js/script/header.js" defer></script>
 <script src="/js/script/modal-loader.js"></script>
+<script src="/js/script/footer/footer-loader.js"></script>
 </body>
 </html>
