feat: 도움 요청 기능 구현 및 도움 리스트 조회 구현

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -83,12 +83,9 @@
     <!-- Buttons Section -->
     <section class="buttons-section">
         <button onclick="openMainModal()">도움 요청하기</button>
-        <button onclick="viewHelpList()">올라온 도움 리스트 보기</button>
+        <button onclick="location.href='/view/help-list'">올라온 도움 리스트 보기</button>
     </section>
-
-
 </div>
-
 <script src="/js/script/header.js" defer></script>
 <script src="/js/script/modal-loader.js"></script>
 <script src="/js/script/footer/footer-loader.js"></script>
