--- a/src/main/resources/static/css/modals/help-request-modal.css
+++ b/src/main/resources/static/css/modals/help-request-modal.css
@@ -4,19 +4,19 @@
     text-align: center;
 }
 
-/* 모달 기본 스타일 */
-.modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
+/*!* 모달 기본 스타일 *!*/
+/*.modal {*/
+/*    display: none;*/
+/*    position: fixed;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    background-color: rgba(0, 0, 0, 0.5);*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    z-index: 1000;*/
+/*}*/
 
 .modal.active {
     display: flex;
