--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -87,8 +87,8 @@
         <button onclick="location.href='/view/help-list'">올라온 도움 리스트 보기</button>
     </section>
 </div>
-<script src="/js/script/header.js" defer></script>
-<script src="/js/script/modal-loader.js"></script>
-<script src="/js/script/footer/footer-loader.js"></script>
 </body>
+    <script src="/js/script/header.js" defer></script>
+    <script src="/js/script/modal-loader.js" defer></script>
+    <script src="/js/script/footer/footer-loader.js" defer></script>
 </html>
